sic-asm/obj/Debug/SicAsmParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.5.3
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Users\alfredo\Documents\Visual Studio 2015\Projects\sic-asm\sic-asm\SicAsm.g4 by ANTLR 4.5.3

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace sic_asm {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.5.3")]
[System.CLSCompliant(false)]
public partial class SicAsmParser : Parser {
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, INT=34, HEX=35, NEMONICO=36, CONSTCAD=37, CONSTHEX=38, 
		INDEXED=39, LABEL=40, NEWLINE=41, WS=42, INVALID=43;
	public const int
		RULE_program = 0, RULE_vacio = 1, RULE_start = 2, RULE_end = 3, RULE_instrs = 4, 
		RULE_prop = 5, RULE_inst = 6;
	public static readonly string[] ruleNames = {
		"program", "vacio", "start", "end", "instrs", "prop", "inst"
	};

	private static readonly string[] _LiteralNames = {
		null, "'START'", "'END'", "'ADD'", "'AND'", "'COMP'", "'DIV'", "'J'", 
		"'JEQ'", "'JGT'", "'JLT'", "'JSUB'", "'LDA'", "'LDCH'", "'LDL'", "'LDX'", 
		"'MUL'", "'OR'", "'RD'", "'STA'", "'STCH'", "'STL'", "'STSW'", "'STX'", 
		"'SUB'", "'TD'", "'TIX'", "'WD'", "'RSUB'", "'WORD'", "'BYTE'", "'RESB'", 
		"'RESW'", "','"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, "INT", "HEX", 
		"NEMONICO", "CONSTCAD", "CONSTHEX", "INDEXED", "LABEL", "NEWLINE", "WS", 
		"INVALID"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "SicAsm.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }


		protected const int EOF=Eof;

	public SicAsmParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class ProgramContext : ParserRuleContext {
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
	 
		public ProgramContext() { }
		public virtual void CopyFrom(ProgramContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class DoProgramaContext : ProgramContext {
		public StartContext start() {
			return GetRuleContext<StartContext>(0);
		}
		public InstrsContext instrs() {
			return GetRuleContext<InstrsContext>(0);
		}
		public EndContext end() {
			return GetRuleContext<EndContext>(0);
		}
		public ITerminalNode Eof() { return GetToken(SicAsmParser.Eof, 0); }
		public VacioContext vacio() {
			return GetRuleContext<VacioContext>(0);
		}
		public DoProgramaContext(ProgramContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ISicAsmListener typedListener = listener as ISicAsmListener;
			if (typedListener != null) typedListener.EnterDoPrograma(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISicAsmListener typedListener = listener as ISicAsmListener;
			if (typedListener != null) typedListener.ExitDoPrograma(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISicAsmVisitor<TResult> typedVisitor = visitor as ISicAsmVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDoPrograma(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			_localctx = new DoProgramaContext(_localctx);
			EnterOuterAlt(_localctx, 1);
			{
			State = 15;
			_la = _input.La(1);
			if (_la==NEWLINE) {
				{
				State = 14; vacio(0);
				}
			}

			State = 17; start();
			State = 18; instrs(0);
			State = 19; end();
			State = 20; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VacioContext : ParserRuleContext {
		public VacioContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_vacio; } }
	 
		public VacioContext() { }
		public virtual void CopyFrom(VacioContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class Vacio1Context : VacioContext {
		public VacioContext vacio() {
			return GetRuleContext<VacioContext>(0);
		}
		public ITerminalNode NEWLINE() { return GetToken(SicAsmParser.NEWLINE, 0); }
		public Vacio1Context(VacioContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ISicAsmListener typedListener = listener as ISicAsmListener;
			if (typedListener != null) typedListener.EnterVacio1(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISicAsmListener typedListener = listener as ISicAsmListener;
			if (typedListener != null) typedListener.ExitVacio1(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISicAsmVisitor<TResult> typedVisitor = visitor as ISicAsmVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVacio1(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Vacio2Context : VacioContext {
		public ITerminalNode NEWLINE() { return GetToken(SicAsmParser.NEWLINE, 0); }
		public Vacio2Context(VacioContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ISicAsmListener typedListener = listener as ISicAsmListener;
			if (typedListener != null) typedListener.EnterVacio2(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISicAsmListener typedListener = listener as ISicAsmListener;
			if (typedListener != null) typedListener.ExitVacio2(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISicAsmVisitor<TResult> typedVisitor = visitor as ISicAsmVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVacio2(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public VacioContext vacio() {
		return vacio(0);
	}

	private VacioContext vacio(int _p) {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = State;
		VacioContext _localctx = new VacioContext(_ctx, _parentState);
		VacioContext _prevctx = _localctx;
		int _startState = 2;
		EnterRecursionRule(_localctx, 2, RULE_vacio, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			{
			_localctx = new Vacio2Context(_localctx);
			_ctx = _localctx;
			_prevctx = _localctx;

			State = 23; Match(NEWLINE);
			}
			_ctx.stop = _input.Lt(-1);
			State = 29;
			_errHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new Vacio1Context(new VacioContext(_parentctx, _parentState));
					PushNewRecursionContext(_localctx, _startState, RULE_vacio);
					State = 25;
					if (!(Precpred(_ctx, 2))) throw new FailedPredicateException(this, "Precpred(_ctx, 2)");
					State = 26; Match(NEWLINE);
					}
					} 
				}
				State = 31;
				_errHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(_input,1,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class StartContext : ParserRuleContext {
		public StartContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_start; } }
	 
		public StartContext() { }
		public virtual void CopyFrom(StartContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class DirectivaInicioContext : StartContext {
		public ITerminalNode LABEL() { return GetToken(SicAsmParser.LABEL, 0); }
		public ITerminalNode INT() { return GetToken(SicAsmParser.INT, 0); }
		public ITerminalNode NEWLINE() { return GetToken(SicAsmParser.NEWLINE, 0); }
		public ITerminalNode HEX() { return GetToken(SicAsmParser.HEX, 0); }
		public DirectivaInicioContext(StartContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ISicAsmListener typedListener = listener as ISicAsmListener;
			if (typedListener != null) typedListener.EnterDirectivaInicio(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISicAsmListener typedListener = listener as ISicAsmListener;
			if (typedListener != null) typedListener.ExitDirectivaInicio(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISicAsmVisitor<TResult> typedVisitor = visitor as ISicAsmVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDirectivaInicio(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StartContext start() {
		StartContext _localctx = new StartContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_start);
		try {
			State = 40;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,2,_ctx) ) {
			case 1:
				_localctx = new DirectivaInicioContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 32; Match(LABEL);
				State = 33; Match(T__0);
				State = 34; Match(INT);
				State = 35; Match(NEWLINE);
				}
				break;

			case 2:
				_localctx = new DirectivaInicioContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 36; Match(LABEL);
				State = 37; Match(T__0);
				State = 38; Match(HEX);
				State = 39; Match(NEWLINE);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EndContext : ParserRuleContext {
		public EndContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_end; } }
	 
		public EndContext() { }
		public virtual void CopyFrom(EndContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class DirectivaFinContext : EndContext {
		public IToken num_type;
		public ITerminalNode[] LABEL() { return GetTokens(SicAsmParser.LABEL); }
		public ITerminalNode LABEL(int i) {
			return GetToken(SicAsmParser.LABEL, i);
		}
		public ITerminalNode NEWLINE() { return GetToken(SicAsmParser.NEWLINE, 0); }
		public ITerminalNode INT() { return GetToken(SicAsmParser.INT, 0); }
		public ITerminalNode HEX() { return GetToken(SicAsmParser.HEX, 0); }
		public DirectivaFinContext(EndContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ISicAsmListener typedListener = listener as ISicAsmListener;
			if (typedListener != null) typedListener.EnterDirectivaFin(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISicAsmListener typedListener = listener as ISicAsmListener;
			if (typedListener != null) typedListener.ExitDirectivaFin(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISicAsmVisitor<TResult> typedVisitor = visitor as ISicAsmVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDirectivaFin(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EndContext end() {
		EndContext _localctx = new EndContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_end);
		int _la;
		try {
			State = 52;
			switch (_input.La(1)) {
			case LABEL:
				_localctx = new DirectivaFinContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 42; Match(LABEL);
				State = 43; Match(T__1);
				State = 45;
				_la = _input.La(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << HEX) | (1L << LABEL))) != 0)) {
					{
					State = 44;
					((DirectivaFinContext)_localctx).num_type = _input.Lt(1);
					_la = _input.La(1);
					if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << HEX) | (1L << LABEL))) != 0)) ) {
						((DirectivaFinContext)_localctx).num_type = _errHandler.RecoverInline(this);
					} else {
						Consume();
					}
					}
				}

				State = 47; Match(NEWLINE);
				}
				break;
			case T__1:
				_localctx = new DirectivaFinContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 48; Match(T__1);
				State = 50;
				_la = _input.La(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << HEX) | (1L << LABEL))) != 0)) {
					{
					State = 49;
					((DirectivaFinContext)_localctx).num_type = _input.Lt(1);
					_la = _input.La(1);
					if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << HEX) | (1L << LABEL))) != 0)) ) {
						((DirectivaFinContext)_localctx).num_type = _errHandler.RecoverInline(this);
					} else {
						Consume();
					}
					}
				}

				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class InstrsContext : ParserRuleContext {
		public InstrsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_instrs; } }
	 
		public InstrsContext() { }
		public virtual void CopyFrom(InstrsContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class Instrucciones2Context : InstrsContext {
		public PropContext prop() {
			return GetRuleContext<PropContext>(0);
		}
		public Instrucciones2Context(InstrsContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ISicAsmListener typedListener = listener as ISicAsmListener;
			if (typedListener != null) typedListener.EnterInstrucciones2(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISicAsmListener typedListener = listener as ISicAsmListener;
			if (typedListener != null) typedListener.ExitInstrucciones2(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISicAsmVisitor<TResult> typedVisitor = visitor as ISicAsmVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInstrucciones2(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class Instrucciones1Context : InstrsContext {
		public InstrsContext instrs() {
			return GetRuleContext<InstrsContext>(0);
		}
		public PropContext prop() {
			return GetRuleContext<PropContext>(0);
		}
		public Instrucciones1Context(InstrsContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ISicAsmListener typedListener = listener as ISicAsmListener;
			if (typedListener != null) typedListener.EnterInstrucciones1(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISicAsmListener typedListener = listener as ISicAsmListener;
			if (typedListener != null) typedListener.ExitInstrucciones1(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISicAsmVisitor<TResult> typedVisitor = visitor as ISicAsmVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInstrucciones1(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public InstrsContext instrs() {
		return instrs(0);
	}

	private InstrsContext instrs(int _p) {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = State;
		InstrsContext _localctx = new InstrsContext(_ctx, _parentState);
		InstrsContext _prevctx = _localctx;
		int _startState = 8;
		EnterRecursionRule(_localctx, 8, RULE_instrs, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			{
			_localctx = new Instrucciones2Context(_localctx);
			_ctx = _localctx;
			_prevctx = _localctx;

			State = 55; prop();
			}
			_ctx.stop = _input.Lt(-1);
			State = 61;
			_errHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new Instrucciones1Context(new InstrsContext(_parentctx, _parentState));
					PushNewRecursionContext(_localctx, _startState, RULE_instrs);
					State = 57;
					if (!(Precpred(_ctx, 2))) throw new FailedPredicateException(this, "Precpred(_ctx, 2)");
					State = 58; prop();
					}
					} 
				}
				State = 63;
				_errHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(_input,6,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class PropContext : ParserRuleContext {
		public PropContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_prop; } }
	 
		public PropContext() { }
		public virtual void CopyFrom(PropContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class PropInstruccionContext : PropContext {
		public InstContext inst() {
			return GetRuleContext<InstContext>(0);
		}
		public PropInstruccionContext(PropContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ISicAsmListener typedListener = listener as ISicAsmListener;
			if (typedListener != null) typedListener.EnterPropInstruccion(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISicAsmListener typedListener = listener as ISicAsmListener;
			if (typedListener != null) typedListener.ExitPropInstruccion(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISicAsmVisitor<TResult> typedVisitor = visitor as ISicAsmVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPropInstruccion(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class NuevaLineaContext : PropContext {
		public ITerminalNode NEWLINE() { return GetToken(SicAsmParser.NEWLINE, 0); }
		public NuevaLineaContext(PropContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ISicAsmListener typedListener = listener as ISicAsmListener;
			if (typedListener != null) typedListener.EnterNuevaLinea(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISicAsmListener typedListener = listener as ISicAsmListener;
			if (typedListener != null) typedListener.ExitNuevaLinea(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISicAsmVisitor<TResult> typedVisitor = visitor as ISicAsmVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNuevaLinea(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PropContext prop() {
		PropContext _localctx = new PropContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_prop);
		try {
			State = 66;
			switch (_input.La(1)) {
